2015-10-30  Nik Nyby  <nnyby@columbia.edu>

	* Fix error that can occur when <video> and
	<audio> has no source.

2015-10-07  Nik Nyby  <nnyby@columbia.edu>

	* Fix metadata collection for the <video> tag

2015-10-05  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection on artstor.org

2015-09-23  Nik Nyby  <nnyby@columbia.edu>

	* Don't alter the aspect ratio of the image in the asset
	finder
	* Use better image thumbnails on flickr
	* Fix video collection on the Columbia Film Language Glossary
	* Fix asset collection on various sites

2015-09-10  Nik Nyby  <nnyby@columbia.edu>

	* Fix collection on YouTube

2015-08-27  Nik Nyby  <nnyby@columbia.edu>

	* Allow images to be collected from Dropbox
	* Fix collection bug where assets weren't imported properly

2015-08-25  Nik Nyby  <nnyby@columbia.edu>

	* Clean up JavaScript
	* Connect to main mediathread instance

2015-08-19  Nik Nyby  <nnyby@columbia.edu>

	* Upgrade jQuery to 2.1.4
	* Display mediathread url when not logged in