@@ -1,3 +1,7 @@
+2015-11-04  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fix image collection overflow problem.
+
 2015-10-30  Nik Nyby  <nnyby@columbia.edu>
 
 	* Fix error that can occur when <video> and
